--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "chat",
+  "name": "facebook-simulator",
   "version": "1.0.0",
-  "description": "This is an application for chat",
+  "description": "This is an application for simulate Facebook",
   "main": "index.js",
   "scripts": {
     "dev": "nodemon --exec babel-node index.js",
@@ -10,7 +10,9 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
-    "Chat",
+    "Facebook",
+    "Home",
+    "Feed",
     "nodejs",
     "express"
   ],
@@ -36,5 +38,5 @@
     "rollup-plugin-progress": "^1.1.1",
     "rollup-plugin-terser": "^5.3.0",
     "uglifycss": "0.0.29"
-  }
+  },
 }
