--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "moment": "^2.24.0",
     "pug": "^2.0.4",
     "socket.io": "^2.3.0",
-    "socket.io-client": "^2.3.0"
+    "socket.io-client": "^2.3.0",
+    "acorn": "^5.7.4"
   },
   "devDependencies": {
     "@babel/core": "^7.8.7",
@@ -38,5 +39,5 @@
     "rollup-plugin-progress": "^1.1.1",
     "rollup-plugin-terser": "^5.3.0",
     "uglifycss": "0.0.29"
-  },
+  }
 }
