--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "This is an application for simulate Facebook",
   "main": "index.js",
   "scripts": {
+    "build:client": "node rollup.config.js",
     "dev": "nodemon --exec babel-node index.js",
     "dev:debug": "nodemon --inspect=0.0.0.0:9229 --exec babel-node index.js",
-    "build:client": "node rollup.config.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -19,14 +19,17 @@
   "author": "Manuel Zavala",
   "license": "ISC",
   "dependencies": {
+    "acorn": "^5.7.4",
+    "bootstrap": "^4.4.1",
     "core-js": "^3.6.4",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "jquery": "^3.4.1",
     "moment": "^2.24.0",
+    "popper.js": "^1.16.1",
     "pug": "^2.0.4",
     "socket.io": "^2.3.0",
-    "socket.io-client": "^2.3.0",
-    "acorn": "^5.7.4"
+    "socket.io-client": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.7",
