--- a/client/package.json
+++ b/client/package.json
@@ -42,7 +42,12 @@
     ]
   },
   "_moduleAliases": {
-    "atoms": "src/components/atoms"
+    "atoms": "src/components/atoms",
+    "molecules": "src/components/molecules",
+    "organisms": "src/components/organisms",
+    "pages": "src/components/pages",
+    "services": "src/services",
+    "common": "src/common"
   },
   "proxy": "http://localhost:8000",
   "devDependencies": {
