--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "build:client": "cd client && npm run build",
     "start:client": "cd client && npm start",
+    "install:client": "cd client && npm install",
     "dev": "nodemon --exec babel-node index.js",
     "dev:debug": "nodemon --inspect=0.0.0.0:9229 --exec babel-node index.js",
     "postinstall": "link-module-alias",
