--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "dev": "nodemon --exec babel-node index.js",
     "dev:debug": "nodemon --inspect=0.0.0.0:9229 --exec babel-node index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "serve": "npm run install:client && npm run build:client && ./node_modules/.bin/babel-node index.js",
+    "serve": "npm run install:client && npm run build:client && npm run dev",
     "clean": "rm -rf build && mkdir build",
     "build-babel": "babel -d ./build ./src -s",
     "build": "npm run clean && npm run build-babel"
